added cruds ops for team and employee

--- a/.env-aider
+++ b/.env-aider
@@ -31,7 +31,7 @@ OPENROUTER_API_KEY=sk-or-v1-795707bc06744d831bdfce6fcaf4a46872af8cb8ba729b113f85
 #ANTHROPIC_API_KEY=
 
 ## Specify the model to use for the main chat
-#AIDER_MODEL=
+AIDER_MODEL=openrouter/deepseek/deepseek-coder
 
 ## Use claude-3-opus-20240229 model for the main chat
 #AIDER_OPUS=
