--- a/aionapp/package.json
+++ b/aionapp/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "apexcharts": "^3.52.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.2.1",
